[package]
name = "ifshow"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
colored = "2.1"
anyhow = "1.0"
regex = "1.10"
libc = "0.2"
nix = { version = "0.27", features = ["ioctl", "net", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.18"

[dependencies.pci-info]
version = "0.3"
optional = true

[features]
default = ["pci-info"]
